objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>ACE</fullName>
        <description>Advanced Client Escalation - Standard (Ursula Opportunity) - for CIS and AM only</description>
        <isActive>true</isActive>
        <values>
            <fullName>ACE Opened w%2FNo Action Requested</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Collateral Prep Requested</fullName>
        </values>
        <values>
            <fullName>Final Pricing Approved</fullName>
        </values>
        <values>
            <fullName>Lost - Client Terming</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Preliminary Pricing Back</fullName>
        </values>
        <values>
            <fullName>Pricing Request Pending More Information</fullName>
        </values>
        <values>
            <fullName>Pricing Requested</fullName>
        </values>
        <values>
            <fullName>Time %26 Attendance Go Live Pending</fullName>
        </values>
        <values>
            <fullName>Underwriting</fullName>
        </values>
        <values>
            <fullName>Won - Adjustment w%2FContract</fullName>
        </values>
        <values>
            <fullName>Won - Adjustment w%2Fo Contract</fullName>
        </values>
        <values>
            <fullName>Won - Entity%2FName Change</fullName>
        </values>
        <values>
            <fullName>Won - Letting Client Go%2FDNM</fullName>
        </values>
        <values>
            <fullName>Won - No Action Taken</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ACE Terming</fullName>
        <description>Advanced Client Escalation - Terming (Ursula Termination) - for CIS and AM only</description>
        <isActive>true</isActive>
        <values>
            <fullName>Client Termination</fullName>
        </values>
        <values>
            <fullName>Lost - Client Terming</fullName>
        </values>
        <values>
            <fullName>Term In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Won - Letting Client Go%2FDNM</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <description>Standard Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACE_Account_Manager__c</fullName>
        <label>ACE Account Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACE_BDM__c</fullName>
        <label>ACE BDM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACE_Close_Date__c</fullName>
        <label>ACE Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACE_Cost_Center__c</fullName>
        <label>ACE Cost Center</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACE_Description__c</fullName>
        <defaultValue>CASE($RecordType.Name,
"ACE",
"Desired Text for ACE line 1" 
&amp;BR()&amp;
"Desired Text for ACE line 2"
&amp;BR()&amp;
"Desired Text for ACE line 3"
, 
"ACE - Terming",
"Desired Text for ACE - Terming line 1" 
&amp;BR()&amp;
"Desired Text for ACE - Terming line 2"
&amp;BR()&amp;
"Desired Text for ACE - Terming line 3", 
"")</defaultValue>
        <description>This field is created to potentially replace Case standard field "Description". Formula will need to be adjusted slightly with the desired script to pre-populate the field.</description>
        <label>ACE Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACE_KARS_Admin__c</fullName>
        <description>KARS Admin at the time of Opp creation</description>
        <inlineHelpText>KARS Admin at the time of Opp creation</inlineHelpText>
        <label>ACE KARS Admin</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACE_Open_Date__c</fullName>
        <label>ACE Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACE_Owner__c</fullName>
        <label>ACE Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Angie Nakasone</fullName>
                </value>
                <value>
                    <fullName>Brittany Quigg</fullName>
                </value>
                <value>
                    <fullName>Client Relations Specialist</fullName>
                </value>
                <value>
                    <fullName>Darren Ebisu</fullName>
                </value>
                <value>
                    <fullName>Deb Galvez</fullName>
                </value>
                <value>
                    <fullName>Dianna McGraw</fullName>
                </value>
                <value>
                    <fullName>Erik De Ryke</fullName>
                </value>
                <value>
                    <fullName>Hannah Brandon</fullName>
                </value>
                <value>
                    <fullName>Harry Byerly</fullName>
                </value>
                <value>
                    <fullName>HR Compliance Team</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>James Idemoto</fullName>
                </value>
                <value>
                    <fullName>John DeMarco</fullName>
                </value>
                <value>
                    <fullName>Jordan Cripps</fullName>
                </value>
                <value>
                    <fullName>Jordan Wong</fullName>
                </value>
                <value>
                    <fullName>Kevin Yamada</fullName>
                </value>
                <value>
                    <fullName>Larry Hubbell</fullName>
                </value>
                <value>
                    <fullName>Mark Shiman</fullName>
                </value>
                <value>
                    <fullName>Natalie Spencer</fullName>
                </value>
                <value>
                    <fullName>Paul Clark</fullName>
                </value>
                <value>
                    <fullName>Professional Services Team</fullName>
                </value>
                <value>
                    <fullName>Rob Gallo</fullName>
                </value>
                <value>
                    <fullName>Stacy Casco</fullName>
                </value>
                <value>
                    <fullName>Tony Guzzardo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACE_Primary_Competitor__c</fullName>
        <label>ACE Primary Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant/CPA/Consultant</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Advantage Total Solutions</fullName>
                </value>
                <value>
                    <fullName>Altres</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Business Support Services/Kevin Hurst</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>Makai HR</fullName>
                </value>
                <value>
                    <fullName>Employer Options</fullName>
                </value>
                <value>
                    <fullName>Employer Pipeline, Inc.</fullName>
                </value>
                <value>
                    <fullName>FHB Payroll Service</fullName>
                </value>
                <value>
                    <fullName>Gusto Payroll</fullName>
                </value>
                <value>
                    <fullName>Hawaii Human Resources, Inc (HiHR)</fullName>
                </value>
                <value>
                    <fullName>Hawaii Workplace</fullName>
                </value>
                <value>
                    <fullName>Heartland Payroll Service</fullName>
                </value>
                <value>
                    <fullName>HiLevel Advisory, LLC</fullName>
                </value>
                <value>
                    <fullName>Human Resources Administration of Hawaii</fullName>
                </value>
                <value>
                    <fullName>ICON Employer Services of Hawaii</fullName>
                </value>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Kila Kila</fullName>
                </value>
                <value>
                    <fullName>NorthWest Payroll Solutions, Inc.</fullName>
                </value>
                <value>
                    <fullName>One Source</fullName>
                </value>
                <value>
                    <fullName>Pacific Data Services</fullName>
                </value>
                <value>
                    <fullName>Paychex</fullName>
                </value>
                <value>
                    <fullName>Staffing Solutions</fullName>
                </value>
                <value>
                    <fullName>Talent HR</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>HR Benefix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACE_Reason_Details__c</fullName>
        <description>This field is used for the KPI Report</description>
        <formula>LEFT( 

IF(Admin_Rates__c=True, "Admin Rates; ", "") 
&amp; 
IF(Applicant_Tracking_System__c=True, "Applicant Tracking System; ", "") 
&amp; 
IF(ASB_Audit_Work__c=True, "ASB Audit Work; ", "") 
&amp; 
IF(Billing_Model__c=True, "Billing Model; ", "") 
&amp; 
IF(Client_Financial_Issues__c=True, "Client Financial Issues; ", "") 
&amp; 
IF(Drug_or_Pre_Employment__c=True, "Drug &amp;/or Pre-Employment; ", "") 
&amp; 
IF(Entity_Name_Signatory_Change_s__c=True, "Entity/Name/Signatory Change(s); ", "") 
&amp; 
IF(EPLI_Add_Drop__c=True, "EPLI Add/Drop; ", "") 
&amp; 
IF(Health_Care_Add_Drop_Change__c=True, "Health Care Add/Drop/Change; ", "") 
&amp; 
IF(Health_Care_Rates__c=True, "Health Care Rates; ", "") 
&amp; 
IF(Labor_Fee_Rates__c=True, "Labor Fee Rates; ", "") 
&amp; 
IF(Post_PSH_Rate_Increase_Repercussions__c=True, "Post PSH Rate Increase Repercussions; ", "") 
&amp; 
IF(Pricing_in_General__c=True, "Pricing in General; ", "") 
&amp; 
IF(Service_Deficiency__c=True, "Service Deficiency; ", "") 
&amp; 
IF(Support_for_Out_of_State_PEO_Employees__c=True, "Support for Out of State PEO Employees; ", "") 
&amp; 
IF(TDI_Add_Drop__c=True, "TDI Add/Drop; ", "") 
&amp; 
IF(Time_Attendance__c=True, "Time &amp; Attendance; ", "") 
&amp; 
IF(WC_Add_Drop__c=True, "WC Add/Drop; ", "") 
&amp; 
IF(Workers_Comp_Rates__c=True, "Workers' Comp Rates; ", "") 
&amp; 
IF(X401K__c=True, "401k; ", "") 




,LEN( 

IF(Admin_Rates__c=True, "Admin Rates; ", "") 
&amp; 
IF(Applicant_Tracking_System__c=True, "Applicant Tracking System; ", "") 
&amp; 
IF(ASB_Audit_Work__c=True, "ASB Audit Work; ", "") 
&amp; 
IF(Billing_Model__c=True, "Billing Model; ", "") 
&amp; 
IF(Client_Financial_Issues__c=True, "Client Financial Issues; ", "") 
&amp; 
IF(Drug_or_Pre_Employment__c=True, "Drug &amp;/or Pre-Employment; ", "") 
&amp; 
IF(Entity_Name_Signatory_Change_s__c=True, "Entity/Name/Signatory Change(s); ", "") 
&amp; 
IF(EPLI_Add_Drop__c=True, "EPLI Add/Drop; ", "") 
&amp; 
IF(Health_Care_Add_Drop_Change__c=True, "Health Care Add/Drop/Change; ", "") 
&amp; 
IF(Health_Care_Rates__c=True, "Health Care Rates; ", "") 
&amp; 
IF(Labor_Fee_Rates__c=True, "Labor Fee Rates; ", "") 
&amp; 
IF(Post_PSH_Rate_Increase_Repercussions__c=True, "Post PSH Rate Increase Repercussions; ", "") 
&amp; 
IF(Pricing_in_General__c=True, "Pricing in General; ", "") 
&amp; 
IF(Service_Deficiency__c=True, "Service Deficiency; ", "") 
&amp; 
IF(Support_for_Out_of_State_PEO_Employees__c=True, "Support for Out of State PEO Employees; ", "") 
&amp; 
IF(TDI_Add_Drop__c=True, "TDI Add/Drop; ", "") 
&amp; 
IF(Time_Attendance__c=True, "Time &amp; Attendance; ", "") 
&amp; 
IF(WC_Add_Drop__c=True, "WC Add/Drop; ", "") 
&amp; 
IF(Workers_Comp_Rates__c=True, "Workers' Comp Rates; ", "") 
&amp; 
IF(X401K__c=True, "401k; ", "") 

) - 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACE Reason Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACE_Reason__c</fullName>
        <label>ACE Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACA</fullName>
                </value>
                <value>
                    <fullName>Add/Drop Service(s)</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Entity/Name/Signatory Change(s)</fullName>
                </value>
                <value>
                    <fullName>Key Contact/Internal Change(s)</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACE_Risk_Status__c</fullName>
        <description>If the AM thinks that we might be at risk of losing the account, this should be set to At Risk. Opps that are originally put as Not At Risk can be switched to At Risk should the situation change; however, once given the At Risk designation, the opp stays there.</description>
        <inlineHelpText>If AM thinks that we might be at risk of losing the account, set to At Risk. Opps that are originally put as Not At Risk can be switched to At Risk should the situation change; however, once given the At Risk designation, the opp stays there.</inlineHelpText>
        <label>ACE Risk Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Not At Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACE_Service_Type__c</fullName>
        <label>ACE Service Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACE_Stage__c</fullName>
        <label>ACE Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opp Opened w/No Action Requested</fullName>
                </value>
                <value>
                    <fullName>Pricing Request Pending More Information</fullName>
                </value>
                <value>
                    <fullName>Pricing Requested</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Preliminary Pricing Back</fullName>
                </value>
                <value>
                    <fullName>Final Pricing Approved</fullName>
                </value>
                <value>
                    <fullName>Collateral Prep Requested</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Attendance Go Live Pending</fullName>
                </value>
                <value>
                    <fullName>Won - No Action Taken</fullName>
                </value>
                <value>
                    <fullName>Won - Adjustment w/o Contract</fullName>
                </value>
                <value>
                    <fullName>Won - Adjustment w/Contract</fullName>
                </value>
                <value>
                    <fullName>Won - Entity/Name Change</fullName>
                </value>
                <value>
                    <fullName>Won - Letting Client Go</fullName>
                    <label>Won - Letting Client Go/DNM</label>
                </value>
                <value>
                    <fullName>Lost - Client Terming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACE_Team__c</fullName>
        <label>ACE Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACE_Termination_Competitor__c</fullName>
        <label>ACE Termination Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant/CPA/Consultant</fullName>
                </value>
                <value>
                    <fullName>ACW/Vensure Inc.</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Altres</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Business Support Services/Kevin Hurst</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>Makai HR</fullName>
                </value>
                <value>
                    <fullName>Employer Options</fullName>
                </value>
                <value>
                    <fullName>Employer Pipeline, Inc.</fullName>
                </value>
                <value>
                    <fullName>FHB Payroll Service</fullName>
                </value>
                <value>
                    <fullName>Gusto Payroll</fullName>
                </value>
                <value>
                    <fullName>Hawaii Human Resources, Inc (HiHR)</fullName>
                </value>
                <value>
                    <fullName>Hawaii Workplace</fullName>
                </value>
                <value>
                    <fullName>Heartland Payroll Service</fullName>
                </value>
                <value>
                    <fullName>HiLevel Advisory, LLC</fullName>
                </value>
                <value>
                    <fullName>HR Benefix</fullName>
                </value>
                <value>
                    <fullName>Human Resources Administration of Hawaii</fullName>
                </value>
                <value>
                    <fullName>ICON Employer Services of Hawaii</fullName>
                </value>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Kila Kila</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>NorthWest Payroll Solutions, Inc.</fullName>
                </value>
                <value>
                    <fullName>One Source</fullName>
                </value>
                <value>
                    <fullName>Pacific Data Services</fullName>
                </value>
                <value>
                    <fullName>Paychex</fullName>
                </value>
                <value>
                    <fullName>Pay Northwest</fullName>
                </value>
                <value>
                    <fullName>Talent HR</fullName>
                </value>
                <value>
                    <fullName>TNT Payroll</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACE_Termination_Report_Date__c</fullName>
        <description>Logic:
If the Final Pay Date date and the Term Initiation Date date is in the same calendar month, assign a Termination Report Date date of Final Pay Date
If the Final Pay Date date and the Term Initiation Date date are in different calendar months and the Final Pay Date Date is after the Term Initiation Date date, assign a Termination Report Date date of Final Pay Date
If the Final Pay Date date and the Term Initiation Date date are in different calendar months and the Final Pay Date Date is before the Term Initiation Date date, assign a Termination Report Date of Term Initiation Date.</description>
        <formula>IF(
AND(
MONTH(Final_Payroll_Date__c)=MONTH(Termination_Initiation_Date__c),
YEAR(Final_Payroll_Date__c)=YEAR(Termination_Initiation_Date__c)),
Final_Payroll_Date__c,

IF(
AND(
OR(
MONTH(Final_Payroll_Date__c)&lt;&gt;MONTH(Termination_Initiation_Date__c),
YEAR(Final_Payroll_Date__c)&lt;&gt;YEAR(Termination_Initiation_Date__c)),
Final_Payroll_Date__c&gt;Termination_Initiation_Date__c),
Final_Payroll_Date__c,

IF(
AND(
OR( 
MONTH(Final_Payroll_Date__c)&lt;&gt; MONTH(Termination_Initiation_Date__c), 
YEAR(Final_Payroll_Date__c)&lt;&gt;YEAR(Termination_Initiation_Date__c)),
Final_Payroll_Date__c&lt;Termination_Initiation_Date__c),
Termination_Initiation_Date__c, 
NULL 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACE Termination Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACE_Tier__c</fullName>
        <description>This is the client tier.</description>
        <inlineHelpText>This is the client tier. If the client has a related account tier (i.e. 1.1) you can just select 1.</inlineHelpText>
        <label>ACE Tier</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACE_Type__c</fullName>
        <label>ACE Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Initiated</fullName>
                </value>
                <value>
                    <fullName>Implementation Initiated</fullName>
                </value>
                <value>
                    <fullName>ProService Initiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASB_Audit_Work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASB Audit Work</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name_Formula__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Original_Start_Date__c</fullName>
        <label>Account Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accountant_CPA_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accountant/CPA/Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <label>Action Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_EEs_at_Termination__c</fullName>
        <label>Active EEs at Termination</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_Discount_P__c</fullName>
        <label>Admin Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Admin_Discount__c</fullName>
        <label>Admin Discount $</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Increase_P__c</fullName>
        <label>Admin Increase %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Admin_Increase__c</fullName>
        <label>Admin Increase $</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Rates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altres__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Altres</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment/Attachment/Exhibit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Tracking_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant Tracking System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Pricing__c</fullName>
        <description>The pricing approved by either the Client Relations Manager or the Director of Account Management.</description>
        <inlineHelpText>The pricing approved by either the Client Relations Manager or the Director of Account Management.</inlineHelpText>
        <label>Approved Pricing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Model_After_Revisions__c</fullName>
        <label>Billing Model After Revisions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blended-1</fullName>
                </value>
                <value>
                    <fullName>Blended-2</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Retainer-1</fullName>
                </value>
                <value>
                    <fullName>Retainer-2</fullName>
                </value>
                <value>
                    <fullName>Retainer-4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <description>IF(TEXT(Account.System__c) = "HRP", "HK", 
IF(TEXT(Account.System__c) = "Ulti", "HK", 
IF(TEXT(Account.System__c) = "PrismHR", "DT", 
IF(TEXT(Account.System__c) = "HRP CLOUD", "DT", 
IF(TEXT(Account.System__c) = "PRISM CLOUD", "DT", 
NULL)))))</description>
        <label>Book</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker (Please Specify Below)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIS_Notes__c</fullName>
        <label>CIS Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calendar_Year_Discount_Total__c</fullName>
        <label>Calendar Year Discount Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calendar_Year_Increase_Total__c</fullName>
        <label>Calendar Year Increase Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Can__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Client Insurance</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Supplemental Benefits</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>HRO</fullName>
                </value>
                <value>
                    <fullName>Voice of Customer</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ceridian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ceridian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_1st_Payroll_Date__c</fullName>
        <label>Change 1st Payroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Effective_Date__c</fullName>
        <label>Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Collateral_Request_Summary__c</fullName>
        <label>Client Collateral Request Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Financial_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Financial Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Account.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Services_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Services Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Temperature__c</fullName>
        <inlineHelpText>Red - Client leaning toward leaving 
Yellow - Good outcome expected but more work to be done 
Green - Good outcome is a foregone conclusion</inlineHelpText>
        <label>Client Temperature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Prep_Requested_Date_End__c</fullName>
        <description>Status "Collateral Prep Requested" date end.</description>
        <label>Collateral Prep Requested Date End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collateral_Prep_Requested_Date_Start__c</fullName>
        <description>Status "Collateral Prep Requested" date start</description>
        <label>Collateral Prep Requested Date Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Competitor_Specified__c</fullName>
        <label>Competitor Specified</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>This field is used for the KPI Report</description>
        <formula>LEFT( 

IF(Accountant_CPA_Consultant__c=True, "Accountant/CPA/Consultant; ", "") 
&amp; 
IF(ADP__c=True, "ADP; ", "") 
&amp; 
IF(Altres__c=True, "Altres; ", "") 
&amp; 
IF(Ceridian__c=True, "Ceridian; ", "") 
&amp; 
IF(Hawaii_Human_Resources_Inc_HiHR__c=True, "Hawaii Human Resources, Inc (HiHR); ", "") 
&amp; 
IF(In_House__c=True, "In-House; ", "") 
&amp; 
IF(Makai_HR__c=True, "Makai HR; ", "") 
&amp; 
IF(Unknown__c=True, "Unknown; ", "") 
&amp; 
IF(ISBLANK(Competitor_Specified__c), "",Competitor_Specified__c &amp; "; ") 

,LEN( 

IF(Accountant_CPA_Consultant__c=True, "Accountant/CPA/Consultant; ", "") 
&amp; 
IF(ADP__c=True, "ADP; ", "") 
&amp; 
IF(Altres__c=True, "Altres; ", "") 
&amp; 
IF(Ceridian__c=True, "Ceridian; ", "") 
&amp; 
IF(Hawaii_Human_Resources_Inc_HiHR__c=True, "Hawaii Human Resources, Inc (HiHR); ", "") 
&amp; 
IF(In_House__c=True, "In-House; ", "") 
&amp; 
IF(Makai_HR__c=True, "Makai HR; ", "") 
&amp; 
IF(Unknown__c=True, "Unknown; ", "") 
&amp; 
IF(ISBLANK(Competitor_Specified__c), "",Competitor_Specified__c &amp; "; ") 

) - 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACE Competitors</label>
        <type>Text</type>
    </fields>
</CustomObject>